boulder/boulder/tests/compile_fail/type/wrong_unit.bo
# Mismatched types
# `Bool`
# `Empty`
# (6:
# (7:
fn wrong_unit() -> Bool {
    Empty
}